Creating and themeing an event & fundraiser block

--- a/config/site/core.entity_view_display.node.event.default.yml
+++ b/config/site/core.entity_view_display.node.event.default.yml
@@ -25,6 +25,7 @@ third_party_settings:
       settings:
         wrappers:
           ds_content: div
+          ds_hidden: div
         outer_wrapper: div
         attributes: ''
         link_attribute: ''
