--- a/config/site/ds_extras.settings.yml
+++ b/config/site/ds_extras.settings.yml
@@ -1,7 +1,7 @@
 fields_extra: false
 fields_extra_list: {  }
 field_permissions: false
-hidden_region: false
+hidden_region: true
 override_node_revision: false
 override_node_revision_view_mode: full
 region_to_block: false
