--- a/config/site/core.entity_view_display.paragraph.text_with_image.default.yml
+++ b/config/site/core.entity_view_display.paragraph.text_with_image.default.yml
@@ -9,8 +9,31 @@ dependencies:
     - field.field.paragraph.text_with_image.field_text_with_image_text
     - paragraphs.paragraphs_type.text_with_image
   module:
+    - ds
     - image
     - text
+third_party_settings:
+  ds:
+    layout:
+      id: ds_1col
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          ds_content: div
+          ds_hidden: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      ds_content:
+        - field_text_with_image_header
+        - field_text_with_image_image
+        - field_text_with_image_text
 id: paragraph.text_with_image.default
 targetEntityType: paragraph
 bundle: text_with_image
@@ -18,27 +41,62 @@ mode: default
 content:
   field_text_with_image_header:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h3
+            fi-cl: header
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: string
-    region: content
+    region: ds_content
   field_text_with_image_image:
-    weight: 2
-    label: above
+    weight: 1
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: image
-    region: content
+    region: ds_content
   field_text_with_image_text:
-    weight: 1
-    label: above
+    weight: 2
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
+    region: ds_content
 hidden:
   field_text_with_image_position: true
