--- a/config/site/core.entity_form_display.paragraph.basic_text.default.yml
+++ b/config/site/core.entity_form_display.paragraph.basic_text.default.yml
@@ -3,23 +3,35 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.basic_text.field_basic_text_columns
+    - field.field.paragraph.basic_text.field_basic_text_button
     - field.field.paragraph.basic_text.field_basic_text_formatted_text
     - field.field.paragraph.basic_text.field_basic_text_header
     - paragraphs.paragraphs_type.basic_text
   module:
+    - paragraphs
     - text
 id: paragraph.basic_text.default
 targetEntityType: paragraph
 bundle: basic_text
 mode: default
 content:
-  field_basic_text_columns:
-    weight: 1
+  field_basic_text_button:
+    type: paragraphs
+    weight: 3
     settings:
-      placeholder: ''
+      title: Button
+      title_plural: Buttons
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
-    type: number
     region: content
   field_basic_text_formatted_text:
     weight: 2
