Fixing display mode for large image paragraphs

--- a/config/site/core.entity_view_display.paragraph.large_image.default.yml
+++ b/config/site/core.entity_view_display.paragraph.large_image.default.yml
@@ -42,7 +42,7 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: minimal
           settings:
             lb: ''
             lb-col: false
