--- a/config/site/image.style.sq_lg.yml
+++ b/config/site/image.style.sq_lg.yml
@@ -5,10 +5,11 @@ dependencies: {  }
 name: sq_lg
 label: 'Square Large (500x500)'
 effects:
-  407b67ff-772b-472f-90fd-a4c49f2a1353:
-    uuid: 407b67ff-772b-472f-90fd-a4c49f2a1353
-    id: image_scale_and_crop
-    weight: 1
+  908a6c6b-9239-452b-8788-69c6303c78bd:
+    uuid: 908a6c6b-9239-452b-8788-69c6303c78bd
+    id: image_scale
+    weight: 2
     data:
       width: 500
       height: 500
+      upscale: false
