--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -17,6 +17,7 @@ module:
   custom_add_another: 0
   datetime: 0
   dblog: 0
+  draggableviews: 0
   dynamic_page_cache: 0
   editor: 0
   entity_reference_revisions: 0
