--- a/config/site/field.field.node.fundraiser.field_fundraiser_calls_to_action.yml
+++ b/config/site/field.field.node.fundraiser.field_fundraiser_calls_to_action.yml
@@ -1,22 +1,22 @@
-uuid: 9334c171-8ba4-4c7e-bd06-8ba90ae5c9b0
+uuid: e6aa6f71-8928-4634-8695-84a2b532066a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_calls_to_action
-    - node.type.event
+    - field.storage.node.field_fundraiser_calls_to_action
+    - node.type.fundraiser
     - paragraphs.paragraphs_type.button
   module:
     - custom_add_another
     - entity_reference_revisions
 third_party_settings:
   custom_add_another:
-    custom_add_another: 'Add Another Call to Action'
-    custom_remove: 'Remove this Call to Action'
-id: node.event.field_calls_to_action
-field_name: field_calls_to_action
+    custom_add_another: ''
+    custom_remove: ''
+id: node.fundraiser.field_fundraiser_calls_to_action
+field_name: field_fundraiser_calls_to_action
 entity_type: node
-bundle: event
+bundle: fundraiser
 label: 'Calls to Action'
 description: ''
 required: false
@@ -31,24 +31,30 @@ settings:
       button: button
     target_bundles_drag_drop:
       attachments:
-        weight: 8
+        weight: 10
         enabled: false
       basic_text:
-        weight: 9
+        weight: 11
         enabled: false
       button:
         enabled: true
-        weight: 10
-      important_dates:
-        weight: 11
-        enabled: false
-      large_image:
         weight: 12
-        enabled: false
-      text_with_image:
+      important_dates:
         weight: 13
         enabled: false
-      text_with_map:
+      large_image:
         weight: 14
+        enabled: false
+      list:
+        weight: 15
+        enabled: false
+      text_with_image:
+        weight: 16
+        enabled: false
+      text_with_map:
+        weight: 17
+        enabled: false
+      two_column_text:
+        weight: 18
         enabled: false
 field_type: entity_reference_revisions
