--- a/config/site/pathauto.pattern.general_content.yml
+++ b/config/site/pathauto.pattern.general_content.yml
@@ -7,18 +7,18 @@ dependencies:
 id: general_content
 label: 'General Content'
 type: 'canonical_entities:node'
-pattern: '[node:content-type]/[node:title]'
+pattern: '[node:content-type:machine-name]/[node:title]'
 selection_criteria:
-  77421dc7-55c7-4e24-9273-44a3ba0418cc:
+  8baeb921-fc22-45aa-a846-1ed796c8472f:
     id: node_type
     bundles:
       announcement: announcement
-      event: event
+      fundraiser: fundraiser
       resource_page: resource_page
     negate: false
     context_mapping:
       node: node
-    uuid: 77421dc7-55c7-4e24-9273-44a3ba0418cc
+    uuid: 8baeb921-fc22-45aa-a846-1ed796c8472f
 selection_logic: and
 weight: -5
 relationships: {  }
