--- a/config/site/views.view.fundraisers.yml
+++ b/config/site/views.view.fundraisers.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - node.type.event
+    - node.type.fundraiser
   module:
     - node
     - user
@@ -127,8 +127,39 @@ display:
           id: type
           table: node_field_data
           field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
           value:
-            event: event
+            fundraiser: fundraiser
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
           entity_type: node
           entity_field: type
           plugin_id: bundle
@@ -148,7 +179,7 @@ display:
           expose:
             label: ''
           granularity: second
-      title: 'Events & Fundraisers'
+      title: 'Fundraisers & Events'
       header: {  }
       footer: {  }
       empty: {  }
